# quark-server

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  quark.sql
quark/: __init__.py  default_settings.py  utils.py
quark/models/: account.py  category.py  record.py  user.py  user_setting.py
quark/services/: account.py  category.py  chart.py  record.py  user.py
quark/services/chart/: __init__.py  category.py  category_trend.py  investment_trend.py  net_capital.py
quark/views/: account.py  record.py  record_form.py  record_item.py  record_request.py  user.py
quark/views/account/: __init__.py  index.py
quark/views/account/schemas/: account.py  account_move.py  account_request.py
quark/views/category/: __init__.py  category_schema.py  index.py
quark/views/chart/: __init__.py  index.py
quark/views/chart/schemas/: category_chart_request.py  category_chart_response.py  expense_income_chart_response.py  investment_chart_response.py  net_capital_chart_request.py  net_capital_chart_response.py
quark/views/record/: __init__.py  edit.py  index.py
quark/views/record/schemas/: record_form.py  record_list_request.py  record_request.py
quark/views/user/: __init__.py  index.py
quark/views/user/schemas/: login_form.py  user_setting.py
tests/services/: test_chart.py
tests/views/: test_record.py
