[tool.poetry]
name = "quark"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"
packages = [{include = "quark"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"
flask-sqlalchemy = "^3.0.3"
pymysql = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
