[tool.poetry]
name = "quark"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"
packages = [{include = "quark"}]

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
pymysql = "^1.0.3"
flask-login = "^0.6.2"
marshmallow = "^3.19.0"
gunicorn = {version = "^20.1.0", optional = true}
python-dateutil = "^2.8.2"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
